# python-weekend-entry-task

./: README.md  balintdecsi_output.json  balintdecsi_solution.py  functions.py  kiwi_notebook.ipynb  pyproject.toml  sample_output.json  sample_output.txt  text.txt
example/: example4.csv
