[tool.poetry]
name = "python-weekend-entry-task"
description = "My solution for the 2022 Kiwi.com Python Weekend Budapest entry task."
authors = ["balintdecsi <balint.decsi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
